# my_controller

./: CMakeLists.txt  README.md  my_controller_plugin.xml  package.xml
config/: controllers.yaml
controller/: my_controller.cpp
controller/include/my_controller/: my_controller.hpp  pseudo_inversion.hpp
controller/urdf/: panda.urdf
